--- a/week_6/week_6.ipynb
+++ b/week_6/week_6.ipynb
@@ -27,88 +27,25 @@
     "\n",
     "## Training in cloud\n",
     "\n",
-    "In this section we provide some tips on how to approach development and training of your model in the cloud. GPU time is expensive, so it does make sense to be careful with what you deploy and how you deploy it. The tips here and in following sections are guidelines for you, you do not have to follow them all, although I would recommend it.\n",
+    "In this section we provide some tips on how to approach development and training of your model in the cloud. GPU time is expensive, so it does make sense to be careful with what you deploy and how you deploy it.\n",
     "\n",
-    "### 1. Use Docker for your environment\n",
+    "### 1. Use Docker\n",
     "\n",
-    "Docker is a great way of having unified environment on your personal computers and in the cloud as well. TensorFlow has many different tags in their DockerHub repository. `tensorflow:2.0.0-gpu-py3` is a repository with newest. `gpu` grants you GPU support and `py3` makes it run on Python 3.6. The docker image we use during our labs is derived from these.\n",
+    "Docker is a great way of having unified environment on your personal computers and in the cloud as well. TensorFlow has many different tags in their [DockerHub repository](https://hub.docker.com/r/tensorflow/tensorflow/). `tensorflow:2.0.0-gpu-py3` is a repository with newest. `gpu` grants you GPU support and `py3` makes it run on Python 3.6. The docker image we use during our labs is derived from these.\n",
     "\n",
     "The training can take several hours, you want to have your docker image running even when you do not have it open in your terminal. You can keep your notebook running in the background by pressing `Ctrl+P` and `Ctrl+Q` and then come back to it via `docker attach`. This [Microsoft tutorial](https://blogs.technet.microsoft.com/machinelearning/2018/03/15/demystifying-docker-for-data-scientists-a-docker-tutorial-for-your-deep-learning-projects/) shows how to use Docker for machine learning projects.\n",
     "\n",
     "If you want to have more control, e.g. add additional libraries, create your own `Dockerfile`. To create your own check out [this tutorial](https://rominirani.com/docker-tutorial-series-writing-a-dockerfile-ce5746617cd) by Romin Irani, or check how does the Dockerfile look like in the repository of this course (`backstage/docker/Dockerfile`).\n",
     " \n",
-    "### 2. Utilize your GPUs\n",
+    "### 2. Monitor GPU usage\n",
     "\n",
     "TensorFlow code can run on GPU by default, you do not need to change anything in your code. If you want to run it from docker, you need to have `nvidia-docker` installed, otherwise you do not see the GPU from the container. You can see [TensorFlow GPU guide](https://www.tensorflow.org/guide/gpu) for more information.\n",
     "\n",
     "After you start your training, you can check how much is your GPU used using tool called `nvidia-smi`. `GPU-Util` is the information you are most interested in. It tells you how much do you use your GPU. If you have a small usage, e.g. below 20%, it is possible that you keep needlessly waiting for your data pre-processing. In that case you should optimize your code.\n",
     "\n",
-    "You can use your own GPUs, but if you might be limited by small VRAM memory size. Keeping all the parameters and intermediate results needed for back-propagation can fill it quite easily.\n",
+    "### 3. Project folder structure\n",
     "\n",
-    "### 3. Develop locally, train in cloud\n",
-    "\n",
-    "You should develop your model locally on your personal machine. Bother with cloud training only when you have your model ready for some serious training. This saves GPU time, but it also lets you develop your model further while the model trains.\n",
-    "\n",
-    "\n",
-    "## Project management\n",
-    "\n",
-    "In this section we provide several helpful tips on how to approach managing deep learning projects. These tips come from our personal experience with managing projects similar to yours. Projects like these are quite specific, mainly because of the high computational requirements and experimental nature of machine learning. One experimental run can take hours of GPU time even for smaller projects. Some state-of-the-art projects can take even months of GPU time to complete. It costs yout time and if you compute in cloud, it also costs you money. For this reason we want to __make every run count__ and we want to avoid redoing any calculations.\n",
-    "\n",
-    "We also mention some additional tips on how to effectively develop your model and how to deploy them. Some of the tips here might seem like an additional work, but they will very likely save you a lot of time down the road. They are also generally considered to be good practices and you should use in any other machine leaning project in the future.\n",
-    "\n",
-    "### 1. Log your results\n",
-    "\n",
-    "You should regularly measure various metrics and keep these records for future reference. These will help you compare different runs and they will also help you with early bug diagnosis.\n",
-    "\n",
-    "__What should you log?__ You should minimally record your _loss_ value and your _main evaluation metric_ value for both _train_ and _validation_ set. You can also measure some additional evaluation metrics (e.g. per class precision and recall for classification) and memory (how much RAM is taken) and time (how long does one batch takes) requirements.\n",
-    "\n",
-    "__How often should you log?__ Most often you evaluate after each epoch. In some cases we have a really big dataset even just one epoch can take several hours. In that case we usually want to have some information about the training earlier and more often than once in an epoch. We can simply log our metrics every X steps instead of at the end of an epoch.\n",
-    "\n",
-    "__How to calculate the training set metrics?__ Calculating the metrics for the whole training set is usually quite costly, these datasets are much bigger than validation sets. You can either (1) calculate these results only for a subset of training set or (2) calculate these metrics as you train and aggregate them at the end.\n",
-    "\n",
-    "__How to implement logging?__ You can use TensorBoard. It provides a convenient API for logging your results and you get cool visualizations for free. `Keras` callbacks (seen in Week 4 lab) provide basic functionality, but you can also log custom metrics, [check their tutorial](https://www.tensorflow.org/tensorboard/scalars_and_keras). If you use TensorBoard, make sure you create a logical system for naming your runs so you can identify them later.\n",
-    "\n",
-    "### 2. Save your models\n",
-    "\n",
-    "You should regularly save your models - its parameters - so you do not lose your progress. You can restore your model anytime and continue with training or run additional evaluation on it.\n",
-    "\n",
-    "__How often should you save your model?__ You can just save your model anytime you evaluate.\n",
-    "\n",
-    "__How many snapshots should you keep?__ You can keep all the snapshots, but this approach can fill your HDD quite easily for bigger models. In that case you can as a bare minimum keep only your last snapshot and your best performing snapshot.\n",
-    "\n",
-    "__How to implement saving?__ TensorFlow provides a convenient API for model saving and restoring. [Check their tutorial](https://www.tensorflow.org/tutorials/keras/save_and_load#manually_save_weights).\n",
-    "\n",
-    "\n",
-    "### 3. Early stopping\n",
-    "\n",
-    "You should stop training when you detect that the run does not improve anymore. This technique is called _early stopping_ and it can save you lots of GPU time. You can stop training for following reasons:\n",
-    "\n",
-    "1. No significant progress was done in previous X epochs.\n",
-    "2. Results are getting significantly worse.\n",
-    "3. Model performs worse than a baseline after certain number of epochs. Some hyperparameters (such as learning rate or batch size) will make the training slower, make sure you do not penalize them.\n",
-    "\n",
-    "This technique is recommended only after you get to know your model and how it behaves on the task. Otherwise, if you use early stopping too liberally, you can stop runs that could have achieved interesting results.\n",
-    "\n",
-    "### 4. Hyperparameter tuning\n",
-    "\n",
-    "Random search is generally the safest bet, however it still might be too expensive for the resources you have available (depending on how difficult your project is training-wise). Look at the hyperparameters other people are using. You can tune them manually at first and then experiment at least with the most important hyperparameters - learning rate, batch size, optimizer and then perhaps also additional architecture parameters (e.g. network depth, hidden layer size).\n",
-    "\n",
-    "You should make a reasonable API for your hyperparameters, __do not rewrite them manually in a file all the time.__ Instead it is a good practice to be able to start the training via command line with a command, e.g.\n",
-    "\n",
-    "```\n",
-    "python train.py --learning-rate 0.003 --batch-size 8\n",
-    "```\n",
-    "\n",
-    "You can use `argparse` Python module to easily parse arguments like these ([tutorial](https://docs.python.org/3/howto/argparse.html#id1)). Also, consider using Tensoboard Hparams extension, that lets you log the hyperparameters for current run and then visualize the results. You can check [TensorBoard](https://www.tensorflow.org/tensorboard/hyperparameter_tuning_with_hparams) documentation or see the code from Week 5 lab.\n",
-    "\n",
-    "\n",
-    "### 5. Experiment notes\n",
-    "\n",
-    "Try keeping logs about the experiments you were running. You have results and hyperparameters logged in various files, but you should also write down your findings and thoughts, e.g. when you found out that some hyperparameter seems to be very sensitive or when you found out that some technique seems to be beneficial for your experiment.\n",
-    "\n",
-    "### 6. Project structure\n",
-    "\n",
-    "Below is a possible project structure. It is inspired by [Cookiecutter Data Science project structure](https://drivendata.github.io/cookiecutter-data-science). This is just a suggestion that can help you get started.\n",
+    "Below is a possible project structure. It is inspired by [Cookiecutter Data Science project structure](https://drivendata.github.io/cookiecutter-data-science).\n",
     "\n",
     "<br/><br/>\n",
     "\n",
@@ -145,6 +82,61 @@
     "\n",
     "Note that you should have your model definition, training loops and data processing pipeline in normal Python scripts. Jupyter notebook is a great tool for communication and data visualization, but I would not recommend to implement your whole project in it. This usually results in a so called _Big Ass Script_ architecture. This is considered to be a development anti-pattern. \n",
     " \n",
+    "## Project management\n",
+    "\n",
+    "In this section we provide several helpful tips on how to approach managing deep learning projects. Projects like these are quite specific, mainly because of the high computational requirements and experimental nature of machine learning. One experimental run can take hours of GPU time even for smaller projects. Some state-of-the-art projects can take even months of GPU time to complete. It costs yout time and if you compute in cloud, it also costs you money. For this reason we want to __make every run count__ and we want to avoid redoing any calculations.\n",
+    "\n",
+    "Some of the tips here might seem like an additional work, but they will very likely save you a lot of time down the road. They are also generally considered to be good practices and you should use in any other machine leaning project in the future.\n",
+    "\n",
+    "### 4. Log your evaluation results\n",
+    "\n",
+    "You should regularly measure various metrics and keep these records for future reference. These will help you compare different runs and they will also help you with early bug diagnosis.\n",
+    "\n",
+    "__What should you log?__ You should minimally record your _loss_ value and your _main evaluation metric_ value for both _train_ and _validation_ set. You can also measure some additional evaluation metrics (e.g. per class precision and recall for classification) and memory (how much RAM is taken) and time (how long does one batch takes) requirements.\n",
+    "\n",
+    "__How often should you log?__ Most often you evaluate after each epoch. In some cases we have a really big dataset even just one epoch can take several hours. In that case we usually want to have some information about the training earlier and more often than once in an epoch. We can simply log our metrics every X steps instead of at the end of an epoch.\n",
+    "\n",
+    "__How to calculate the training set metrics?__ Calculating the metrics for the whole training set is usually quite costly, these datasets are much bigger than validation sets. You can either (1) calculate these results only for a subset of training set or (2) calculate these metrics as you train and aggregate them at the end.\n",
+    "\n",
+    "__How to implement logging?__ You can use TensorBoard. It provides a convenient API for logging your results and you get cool visualizations for free. `Keras` callbacks (seen in Week 4 lab) provide basic functionality, but you can also log custom metrics, [check their tutorial](https://www.tensorflow.org/tensorboard/scalars_and_keras). If you use TensorBoard, make sure you create a logical system for naming your runs so you can identify them later.\n",
+    "\n",
+    "### 5. Save your models\n",
+    "\n",
+    "You should regularly save your models - its parameters - so you do not lose your progress. You can restore your model anytime and continue with training or run additional evaluation on it.\n",
+    "\n",
+    "__How often should you save your model?__ You can just save your model anytime you evaluate.\n",
+    "\n",
+    "__How many snapshots should you keep?__ You can keep all the snapshots, but this approach can fill your HDD quite easily for bigger models. In that case you can as a bare minimum keep only your last snapshot and your best performing snapshot.\n",
+    "\n",
+    "__How to implement saving?__ TensorFlow provides a convenient API for model saving and restoring. [Check their tutorial](https://www.tensorflow.org/tutorials/keras/save_and_load#manually_save_weights).\n",
+    "\n",
+    "### 6. Hyperparameter tuning\n",
+    "\n",
+    "Random search is generally the safest bet, however it still might be too expensive for the resources you have available (depending on how difficult your project is training-wise). Look at the hyperparameters other people are using. You can tune them manually at first and then experiment at least with the most important hyperparameters - learning rate, batch size, optimizer and then perhaps also additional architecture parameters (e.g. network depth, hidden layer size).\n",
+    "\n",
+    "You should make a reasonable API for your hyperparameters, __do not rewrite them manually in a file all the time.__ Instead it is a good practice to be able to start the training via command line with a command, e.g.\n",
+    "\n",
+    "```\n",
+    "python train.py --learning-rate 0.003 --batch-size 8\n",
+    "```\n",
+    "\n",
+    "You can use `argparse` Python module to easily parse arguments like these ([tutorial](https://docs.python.org/3/howto/argparse.html#id1)). Also, consider using Tensoboard Hparams extension, that lets you log the hyperparameters for current run and then visualize the results. You can check [TensorBoard](https://www.tensorflow.org/tensorboard/hyperparameter_tuning_with_hparams) documentation or see the code from Week 5 lab.\n",
+    "\n",
+    "\n",
+    "### 7. Keep experiment notes\n",
+    "\n",
+    "Try keeping logs about the experiments you were running. You have results and hyperparameters logged in various files, but you should also write down your findings and thoughts, e.g. when you found out that some hyperparameter seems to be very sensitive or when you found out that some technique seems to be beneficial for your experiment.\n",
+    "\n",
+    "### 8. Early stopping\n",
+    "\n",
+    "You should stop training when you detect that the run does not improve anymore. This technique is called _early stopping_ and it can save you lots of GPU time. You can stop training for following reasons:\n",
+    "\n",
+    "1. No significant progress was done in previous X epochs.\n",
+    "2. Results are getting significantly worse.\n",
+    "3. Model performs worse than a baseline after certain number of epochs. Some hyperparameters (such as learning rate or batch size) will make the training slower, make sure you do not penalize them.\n",
+    "\n",
+    "This technique is recommended only after you get to know your model and how it behaves on the task. Otherwise, if you use early stopping too liberally, you can stop runs that could have achieved interesting results.\n",
+    "\n",
     "## Growing your model\n",
     "\n",
     "There is a lot of devicions you need to make when you start a deep learning project. You have to design a model, choose a optimizer algorithm, propose data representation, pick an evaluation metrics, choose some form of regularization, etc. The sheer number of decisions can be overwhelming. Even if you pick some, it is hard to tell, what to change if you fail to train your model.\n",
