--- a/week_6/week_6.ipynb
+++ b/week_6/week_6.ipynb
@@ -110,17 +110,33 @@
     "\n",
     "__How to implement saving?__ TensorFlow provides a convenient API for model saving and restoring. [Check their tutorial](https://www.tensorflow.org/tutorials/keras/save_and_load#manually_save_weights).\n",
     "\n",
-    "### 6. Hyperparameter tuning\n",
+    "### 6. Hyperparameter management\n",
     "\n",
-    "Random search is generally the safest bet, however it still might be too expensive for the resources you have available (depending on how difficult your project is training-wise). Look at the hyperparameters other people are using. You can tune them manually at first and then experiment at least with the most important hyperparameters - learning rate, batch size, optimizer and then perhaps also additional architecture parameters (e.g. network depth, hidden layer size).\n",
+    "__Reminder about hyperparameter tuning:__ Random search is generally the safest bet, however it still might be too expensive for the resources you have available (depending on how difficult your project is training-wise). Look at the hyperparameters other people are using. You can tune them manually at first and then experiment at least with the most important hyperparameters - learning rate, batch size, optimizer and then perhaps also additional architecture parameters (e.g. network depth, hidden layer size).\n",
     "\n",
     "You should make a reasonable API for your hyperparameters, __do not rewrite them manually in a file all the time.__ Instead it is a good practice to be able to start the training via command line with a command, e.g.\n",
     "\n",
     "```\n",
-    "python train.py --learning-rate 0.003 --batch-size 8\n",
+    "python train.py --learning_rate 0.003 --batch_size 8\n",
     "```\n",
     "\n",
-    "You can use `argparse` Python module to easily parse arguments like these ([tutorial](https://docs.python.org/3/howto/argparse.html#id1)). Also, consider using Tensoboard Hparams extension, that lets you log the hyperparameters for current run and then visualize the results. You can check [TensorBoard](https://www.tensorflow.org/tensorboard/hyperparameter_tuning_with_hparams) documentation or see the code from Week 5 lab.\n",
+    "You can use `argparse` Python module to easily parse arguments like these ([tutorial](https://docs.python.org/3/howto/argparse.html#id1)). However, you should have your default hyperparameter values stored in a config file, e.g. a YAML file:\n",
+    "\n",
+    "```\n",
+    "learning_rate: 0.01\n",
+    "batch_size: 16\n",
+    "num_hidden_layers: 4\n",
+    "```\n",
+    "\n",
+    "And then parse it with `pyyaml` library:\n",
+    "\n",
+    "```\n",
+    "import yaml\n",
+    "\n",
+    "hparams = yaml.safe_load('hparams.yaml')\n",
+    "```\n",
+    "\n",
+    "Consider using Tensoboard Hparams extension, that lets you log the hyperparameters for current run and then visualize the results. You can check [TensorBoard](https://www.tensorflow.org/tensorboard/hyperparameter_tuning_with_hparams) documentation or see the code from Week 5 lab.\n",
     "\n",
     "\n",
     "### 7. Keep experiment notes\n",
@@ -143,11 +159,11 @@
     "\n",
     "Another problem with developing deep learning models is that they can fail silently. The fact that no exception was raised during the training does not mean that the training is done correctly. You can feed wrong data in wrong format, you can fail to calculate your loss or minimize it properly, you can miscalculate you evaluation metrics, etc. In this section we mention few tricks that can help you with these problems.\n",
     "\n",
-    "### 1. Build infrastructure first\n",
+    "### 9. Build infrastructure first\n",
     "\n",
     "Before you start experimenting with your problem, make sure you have the code infrastructure ready. Data processing pipeline, evaluation metrics calculation, results logging, model saving, hyperparameter management, etc. It is recommended to have this infrastructure set up before you start your training. This backbone can save you tremendous amount of time later on that you would spend on debugging and redoing calculations.\n",
     "\n",
-    "### 2. From training to testing data\n",
+    "### 10. From train to test\n",
     "\n",
     "#### Starting with few batches\n",
     "When I implement a model, before running a full-blown experiment, I like to make sure that it at least seems to be able of learning. For this I try to __overfit it on a very small number (tens) of training samples.__ For this I also often use small version of model, i.e. relatively small hidden layer sizes etc. If the model is not able to get a good performance or decrease loss on a small number of samples, it won't work on full training set either. It usually means that there is a logical error in implementation that should be addressed. This preliminary test serves as a kind of sanity check and can be done locally on your personal computers.\n",
@@ -164,7 +180,7 @@
     "2. __Training set__ - Does it have enough capacity? Solve by making the model bigger and playing with optimization hyperparameters.\n",
     "3. __Testing set__ - Can it generalize well? Solve by adding more data (including using data augmentation) or by using regularization.\n",
     "\n",
-    "### 3. From simple to complex model\n",
+    "### 11. From simple to complex\n",
     "\n",
     "You should start with a very simple model to establish a baseline you can improve. It can be a linear regression, simple convolutional network or something similar that you can code very easily. Only then start adding complexity, making the model bigger and adding additional parts.\n",
     "\n",
@@ -172,7 +188,8 @@
     "\n",
     "- Andrej Karpathy, a Slovak that currently leads the development of Tesla's autonomous driving, has a nice [blog](http://karpathy.github.io/2019/04/25/recipe/) about neural network development, where he discusses how to debug and grow your models.\n",
     "- DataDriven published [their version](https://drivendata.github.io/cookiecutter-data-science) of how should a data science working directory looks like.\n",
-    "- [Third course from Coursera's Deep Learning specialization](https://www.youtube.com/playlist?list=PLkDaE6sCZn6E7jZ9sN_xHwSHOdjUxUW_b) by Andrew Ng deals with how you should manage your machine learning projects \n"
+    "- [Third course from Coursera's Deep Learning specialization](https://www.youtube.com/playlist?list=PLkDaE6sCZn6E7jZ9sN_xHwSHOdjUxUW_b) by Andrew Ng deals with how you should manage your machine learning projects.\n",
+    "- Han Xiao has a [nice blog](https://hanxiao.github.io/2017/12/21/Use-HParams-and-YAML-to-Better-Manage-Hyperparameters-in-Tensorflow/) about using YAML for hyperparameter management.\n"
    ]
   },
   {
