--- a/project/gcp.ipynb
+++ b/project/gcp.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "## Creating GCP Project\n",
     "\n",
-    "1. You have received a invitation link. Open this link and fill out the form. Use your `stuba.sk` email address, e.g. `xsurname@stuba.sk`.\n",
+    "1. You have received a invitation link. Open this link and fill out the form. Use your `stuba.sk` email address, e.g. `xsurname@stuba.sk`. [(Image reference)](../backstage/gcp_tutorial_images/grants.png)\n",
     "\n",
     "2. You will receive a verification email. This email can be found in your [`webmail.stuba.sk`](https://webmail.stuba.sk/) account. Click on the link in this email to verify your address.\n",
     "\n",
@@ -26,10 +26,10 @@
     "\n",
     "    __First member__\n",
     "\n",
-    "    3.1 Click the link in the email with the coupon. You will see the _Education grants_ page. First, make sure that you are logged in in your `stuba.sk` account (top right). If you are not, switch the accounts.   \n",
+    "    3.1 Click the link in the email with the coupon. You will see the _Education grants_ page [(Image reference)](../backstage/gcp_tutorial_images/redeem.png). First, make sure that you are logged in in your `stuba.sk` account (top right). If you are not, switch the accounts.   \n",
     "    3.2 Fill out your coupon code and other form fields, then click _Accept and continue_.  \n",
-    "    3.3 You should now see a GCP Console dashboard. This is where you can manage your GCP projects.      \n",
-    "    3.4 You can check if your coupon went through. Navigate to _☰ > Billing_. You should see that you have a _Neural Networks_ billing account with 50$ credit. \n",
+    "    3.3 You should now see a GCP Console dashboard  [(Image reference)](../backstage/gcp_tutorial_images/dashboard.png). This is where you can manage your GCP projects.      \n",
+    "    3.4 You can check if your coupon went through. Navigate to _☰ > Billing_. You should see that you have a _Neural Networks_ billing account with 50$ credit.  [(Image reference)](../backstage/gcp_tutorial_images/billing.png)\n",
     "    3.5 Add your teammate to your project. Go back to the dashboard (click on the GCP logo) and use the option _Add people to this project_ in _Project info_ section. Fill your teammate's `stuba.sk` email address and pick _Project > Owner_ as a role.  \n",
     "    3.6 You can also use _Go to project settings_ option from the dashboard to change your project's name.\n",
     "    \n",
@@ -46,7 +46,7 @@
     "By default we have 0 GPUs available for our projects. We need to send a quota request to get some GPUs:\n",
     "\n",
     "1. Navigate to _☰ > IAM & admin > Quotas_.\n",
-    "2. Use _Metric_ filter to first unselect all the metrics _(None)_ and then use the text search field to find _GPUs (all regions)_.\n",
+    "2. Use _Metric_ filter to first unselect all the metrics _(None)_ and then use the text search field to find _GPUs (all regions)_. [(Image reference)](../backstage/gcp_tutorial_images/quotas.png)\n",
     "3. Select this metric viac checkbox and click _Edit quotas_ option.\n",
     "4. Then you need to fill your contact option in the popup window on the right and finally ask for quota increase.\n",
     "5. You can ask for _4_ GPUs (you will usually use just one, but it does not hurt to have a reserve) and as _Request description_ write that you need it for \"Deep learning university course\".\n",
@@ -62,7 +62,7 @@
     "    - Select the _Machine Type_ as _Custom_ and select the number of CPU cores and RAM. These should be set according to your project requirements. I would recommend to start with 2 cores and 12 GB RAM.\n",
     "    - After you click on _CPU platform and GPU_ you can select the number of GPUs. First, I would recommend using only 1 GPU. The cheapest are K80s (~0.35$/h). Different regions provide different GPUs. Pick the region (at the top of the form) accordingly to this [table](https://cloud.google.com/compute/docs/gpus/#gpus-list). I would recommend using European regions.\n",
     "    - Select a boot image. You can use your own Docker image. Otherwise I would suggest using _Ubuntu 16.04 LTS,_ which is also used for the TensorFlow images. You can start with a 30GB SSD disk (you need ~7GB for system, some space for you data and logs from your training). If you have a big training set, set the HDD size accordingly. \n",
-    "    - Finally select the _Management, security, disks, networking, sole tenancy_ option and set _Automatic Restart_ to _Off_. More on this later.\n",
+    "    - Finally select the _Management, security, disks, networking, sole tenancy_ option and set _Automatic Restart_ to _Off_. More on this later. [(Image reference)](../backstage/gcp_tutorial_images/vm_setup.png)\n",
     "4. Create your VM\n",
     "\n",
     "You can see the hourly estimate top right, it should be ~0.50$/h. This does not include tax. You can change all the options (RAM size, number of CPUs, etc) later, so don't stress too much about them.\n",
@@ -73,13 +73,13 @@
     "\n",
     "<p style='color: red; font-weight: bold'>Make sure your turn off your VM when you are not using it.</p>\n",
     "\n",
-    "It is billed for each minute it runs. If you leave it running without training, you are wasting your credit. You can monitor your CPU usage from the main page dashboard, or you can even use a _Cloud Console_ mobile app to monitor it from your phone. CPU usage can tell you if a script is running on the VM or if it is idle.\n",
+    "It is billed for each minute it runs. If you leave it running without training, you are wasting your credit. You can monitor your CPU usage from the main page dashboard, or you can even use a _Cloud Console_ mobile app to monitor it from your phone. CPU usage can tell you if a script is running on the VM or if it is idle.  [(Image reference)](../backstage/gcp_tutorial_images/vms.png)\n",
     "\n",
     "### Connecting to Your VM\n",
     "\n",
     "You can connect to your VM via _Cloud SDK_. Cloud SDK is a console based tool that lets you use commands such as `ssh` or `scp` and connect to your VM. Install Cloud SDK using the [official installation guide](https://cloud.google.com/sdk/install), it has different versions for different operations systems.\n",
     "\n",
-    "After you install SDK you can use `gcloud` commands in your terminal. E.g. if you want to connect to your VM, you can use `gcloud beta compute ssh` command to connect to your VM. Go to the _VM Instances_ menu and start your VM. After the VM starts, select the dropdown menu next to the _SSH_ option in the list of instances and select the _View gcloud command_ option. You can copy the command it generates and use it in your console.\n",
+    "After you install SDK you can use `gcloud` commands in your terminal. E.g. if you want to connect to your VM, you can use `gcloud beta compute ssh` command to connect to your VM. Go to the _VM Instances_ menu and start your VM. After the VM starts, select the dropdown menu next to the _SSH_ option in the list of instances and select the _View gcloud command_ option  [(Image reference)](../backstage/gcp_tutorial_images/ssh_command.png). You can copy the command it generates and use it in your console. [(Image reference)](../backstage/gcp_tutorial_images/login.png)\n",
     "\n",
     "## Basic Setup\n",
     "\n",
@@ -100,6 +100,7 @@
     "```\n",
     "sudo apt update \n",
     "sudo apt install nvidia-430\n",
+    "echo \"sudo nvidia-smi -pm 1\" >> ~/.bashrc\n",
     "```\n",
     "\n",
     "After you install the driver, reboot your VM:\n",
@@ -109,13 +110,7 @@
     "\n",
     "```\n",
     "\n",
-    "After a short while you can log back in, then run the following command to turn on persistence mode:\n",
-    "\n",
-    "```\n",
-    "sudo nvidia-smi -pm 1\n",
-    "```\n",
-    "\n",
-    "Finally after running the following command, you should see the status of your GPU:\n",
+    "Finally after running the following command, you should see the status of your GPU  [(Image reference)](../backstage/gcp_tutorial_images/nvidia.png):\n",
     "\n",
     "```\n",
     "nvidia-smi\n",
