GCP tutorial images added

--- a/project/gcp.ipynb
+++ b/project/gcp.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "1. We will create a GCP project owned by both team members that will be paid by your coupons.\n",
     "2. We will create a _virtual machine_ (VM) with GPU, that can be used for training neural networks.\n",
-    "3. We will discuss a training workflow for this VM.\n",
+    "3. We will run a TensorFlow code in Docker that communicaets with GPU.\n",
     "\n",
     "## Preliminaries\n",
     "\n",
