Added one additional step to GCP setup tutorial

--- a/project/gcp.ipynb
+++ b/project/gcp.ipynb
@@ -45,6 +45,7 @@
     "\n",
     "By default we have 0 GPUs available for our projects. We need to send a quota request to get some GPUs:\n",
     "\n",
+    "1. Navigate to _☰ > Compute Engine > VM Instances_. This will start a setup of your VM capabilities, i.e. you will tell GCP that you want to use virtual machines. Wait until the process finishes.\n",
     "1. Navigate to _☰ > IAM & admin > Quotas_.\n",
     "2. Use _Metric_ filter to first unselect all the metrics _(None)_ and then use the text search field to find _GPUs (all regions)_. [(Image reference)](../backstage/gcp_tutorial_images/quotas.png)\n",
     "3. Select this metric viac checkbox and click _Edit quotas_ option.\n",
