--- a/week_7/week_7.ipynb
+++ b/week_7/week_7.ipynb
@@ -2,9 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-76840a863e6d5213\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-76840a863e6d5213\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          url.port = 6006;\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "You need to run this cell for the code in following cells to work.\n",
@@ -82,7 +106,8 @@
     "\n",
     "Compared to the general neuron, computational neuron has fewer weights, e.g. for $3 \\times 3$ window we have only 9 weights (and 1 bias) and we reuse these weights multiple times for all the windows. The weight matrix $\\mathbf{W}$ is also called a _kernel_.\n",
     "\n",
-    "ILL\n",
+    "<img src=\"images/neuron.svg\" alt=\"Convolutional neuron computation\" style=\"width: 60%; margin: 5em auto 2em;\"/>\n",
+    "<center><small>Illustration of how one pixel of the output is calculated for one neuron. We look at the window $\\mathbf{P}$ and combine the pixel values with our kernel weights $\\mathbf{W}$. The weights are trainable parameters of the neuron.</small></center>\n",
     "\n",
     "#### Multiple input channels\n",
     "\n",
@@ -135,13 +160,13 @@
     "\n",
     "Apart from convolutional layers, convolutional neural networks also contain max-pooling layers. These layers are very simple, we split each channel into small windows called _pools_, e.g. with a size of $2 \\times 2$. From each pool we select only the maximum value. We construct new channel from these maxima:\n",
     "\n",
-    "ILL\n",
+    "<img src=\"images/max.svg\" alt=\"Max-pooling\" style=\"width: 30%; margin: 2em auto;\"/>\n",
+    "<center><small>2x2 max-pooling applied over 8x8 input. Red border shows individual pools. From each pool the maximum value is selected for output.</small></center>\n",
     "\n",
-    "Max-pooling layers also have stride, similarly to convolutional layers. When we have the same stride as pool size, we reduces the dimensionality of the tensors in the network, e.g. we reduce $256 \\times 256 \\times 100$ into $128 \\times 128 \\times 100$ with $2 \\times 2$ pools and $2 \\times 2$ strides. But it also effectively increases the receptive field of the neurons:\n",
+    "Max-pooling layers also have stride, similarly to convolutional layers. When we have the same stride as pool size, we reduces the dimensionality of the tensors in the network, e.g. we reduce $256 \\times 256 \\times 100$ into $128 \\times 128 \\times 100$ with $2 \\times 2$ pools and $2 \\times 2$ strides. But it also effectively increases the receptive field of the neurons. In deep networks, the receptive fields of the neurons from the later layers consist of the entire input image. Because each max-pooling halves width and height we usually use images with powers of two as dimensions.\n",
     "\n",
-    "ILL\n",
-    "\n",
-    "In deep networks, the receptive fields of the neurons from the later layers consist of the entire input image. Because each max-pooling halves width and height we usually use images with powers of two as dimensions.\n",
+    "<img src=\"images/receptive_field.svg\" alt=\"Receptive field\" style=\"width: 100%; margin: 2em auto 1em;\"/>\n",
+    "<center><small>Receptive field of neuron calculating a pixel value shaded in blue. We can see that only after three layers (convolutional 3x3, max-pooling 2x2, convolutional 3x3), the receptive field w.r.t. original image is quite large. By chaining multiple max-pooling layers, the receptive field would only grow. Red and orange mark the receptive fields across neighbouring layers.</small></center>\n",
     "\n",
     "### Convolutional neural network\n",
     "\n",
@@ -505,7 +530,7 @@
     "\n",
     "Lambda `l` is usually set to a small number, I would consider exponentially search through $\\langle 10^{-4}, 10^{-2}$ range. For dropout rate a number from $\\langle 0.1, 0.5$ range is usually used. I would typically use the default values for batch normalization, but you can tune them as well. L2/L1 is not as popular as it once was, because it is quite sensitive to how we set the lambda hyperparameter. Nowadays most people use either dropout and batch normalization as a single technique for their model.\n",
     "\n",
-    "__Exercise 7.5:__ Try to apply regularization techniques on the CNN model defined above. It might take quite a while to run all 30 epochs, but you can have it run in the background. Can you improve the test set results?\n",
+    "__Exercise 7.5:__ Try to apply regularization techniques on the CNN model defined above. It might take quite a while to run all 30 epochs, but you can have it run in the background. Can you improve the test set results? It might be quite tricky, because CNNs usually do not require much regularization.\n",
     "\n",
     "## Key Concepts from This Week\n",
     "\n",
