Correct TF image name in W6

--- a/week_6/week_6.ipynb
+++ b/week_6/week_6.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "### 1. Use Docker\n",
     "\n",
-    "Docker is a great way of having unified environment on your personal computers and in the cloud as well. TensorFlow has many different tags in their [DockerHub repository](https://hub.docker.com/r/tensorflow/tensorflow/). `tensorflow:2.0.0-gpu-py3` is a repository with newest. `gpu` grants you GPU support and `py3` makes it run on Python 3.6. The docker image we use during our labs is derived from these.\n",
+    "Docker is a great way of having unified environment on your personal computers and in the cloud as well. TensorFlow has many different tags in their [DockerHub repository](https://hub.docker.com/r/tensorflow/tensorflow/). `tensorflow/tensorflow:2.0.0-gpu-py3` is an image with newest TF version. `gpu` grants you GPU support and `py3` makes it run on Python 3.6. The docker image we use during our labs is derived from these.\n",
     "\n",
     "The training can take several hours, you want to have your docker image running even when you do not have it open in your terminal. You can keep your notebook running in the background by pressing `Ctrl+P` and `Ctrl+Q` and then come back to it via `docker attach`. This [Microsoft tutorial](https://blogs.technet.microsoft.com/machinelearning/2018/03/15/demystifying-docker-for-data-scientists-a-docker-tutorial-for-your-deep-learning-projects/) shows how to use Docker for machine learning projects.\n",
     "\n",
